--- a/.obsidian/config
+++ b/.obsidian/config
@@ -1,19 +1,1 @@
-{
-  "theme": "obsidian",
-  "pluginEnabledStatus": {
-    "file-explorer": true,
-    "global-search": true,
-    "switcher": true,
-    "graph": true,
-    "backlink": true,
-    "command-palette": true,
-    "markdown-importer": true,
-    "word-count": true,
-    "page-preview": true,
-    "custom-css": true,
-    "templates": true
-  },
-  "alwaysUpdateLinks": true,
-  "promptDelete": false,
-  "foldHeading": true
-}
+{"theme":"obsidian","pluginEnabledStatus":{"file-explorer":true,"global-search":true,"switcher":true,"graph":true,"backlink":true,"command-palette":true,"markdown-importer":true,"word-count":true,"page-preview":true,"custom-css":true,"templates":true},"alwaysUpdateLinks":true,"promptDelete":false,"foldHeading":true,"enabledPlugins":[]}
