--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -8,11 +8,8 @@
         "type": "leaf",
         "active": true,
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "References/Jared Friedman - How to Get Startup Ideas.md",
-            "mode": "preview"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -40,7 +37,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "seibel",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -49,8 +46,7 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -70,7 +66,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "References/Jared Friedman - How to Get Startup Ideas.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,15 +82,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "Evergreen Notes/Money/Untitled.md",
+    "Evergreen Notes/Startups/2. Startups.md",
+    "Eric Migicovsky - Startup School - How to Talk to Users.md",
+    "References/Adora Cheung - How to Proritize Your Time (Startup School).md",
+    "Evergreen Notes/Habits/1.2 How to Create New Habits.md",
     "References/Jared Friedman - How to Get Startup Ideas.md",
     "References/Paul Graham - Why to not not start a startup.md",
     "References/Atomic Habits - James Clear.md",
-    "References/Adora Cheung - How to Proritize Your Time (Startup School).md",
-    "Eric Migicovsky - Startup School - How to Talk to Users.md",
     "Paul Graham - Maker's Schedule.md",
-    "Paul Graham - How to Apply to Y Combinator.md",
-    "Marc Andreessen - Product Market Fit.md",
-    "Kevin Hale - How to Pitch Your Startup (The Essay).md",
-    "References/Untitled.md"
+    "Paul Graham - How to Apply to Y Combinator.md"
   ]
 }
