--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -8,8 +8,11 @@
         "type": "leaf",
         "active": true,
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Marc Andreessen -  On Productivity, Scheduling, Reading Habits, Work, and More.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -66,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Marc Andreessen -  On Productivity, Scheduling, Reading Habits, Work, and More.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,6 +86,7 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "Untitled.md",
     "Evergreen Notes/Money/Untitled.md",
     "Evergreen Notes/Startups/2. Startups.md",
     "Eric Migicovsky - Startup School - How to Talk to Users.md",
@@ -90,7 +95,6 @@
     "References/Jared Friedman - How to Get Startup Ideas.md",
     "References/Paul Graham - Why to not not start a startup.md",
     "References/Atomic Habits - James Clear.md",
-    "Paul Graham - Maker's Schedule.md",
-    "Paul Graham - How to Apply to Y Combinator.md"
+    "Paul Graham - Maker's Schedule.md"
   ]
 }
